[project]
name = "pi-coding-agent-openclaw-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11.9",
    "pypdfium2>=5.6.0",
    "mermaid-py",
    "requests",
    "httpx",
    "dotenv",
    "cachetools",
    "pydantic",
    "pydantic-ai-slim[fastmcp]",
    "xmltodict",
    "msal",
    "langgraph",
    "langchain_openai",
    "openai"
]
